hphp/test/zend/bad/ext/standard/tests/serialize/003.php.expectregex
d:100;
float\(100\)

d:5[0-9]*;
float\(5\.2E\+25\)

d:8\.52[89][0-9]+E-22;
float\(8\.529E-22\)

d:8\.[9]*[0-9]*E-9;
float\(9\.0E-9\)